nexus-values/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus
spec:
  selector:
    app: nexus-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
